# go2_stack

./: README.md
docker/container-jetson5/: Dockerfile  bashrc  commands.sh  zshrc
docker/container-jetson5-ai/: Dockerfile  commands.sh  zshrc
docker/container-jetson5-ai/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-jetson5/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-x86-cudev/: Dockerfile
docker/container-x86-cudev-ai/: Dockerfile  commands.sh
docker/container-x86-cudev-ai/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-x86-cudev/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-x86-dev/: Dockerfile  commands.sh
docker/container-x86-dev/.devcontainer/: devcontainer.json  docker-compose.yaml
src/go2_control/: CMakeLists.txt  package.xml
src/go2_control/config/: go2_control.yaml
src/go2_control/include/go2_control/: go2_control.hpp
src/go2_control/launch/: go2_control_app.launch.py
src/go2_control/src/: go2_control_app.cpp
src/go2_control/src/go2_control/: go2_control.cpp  go2_control_actions.cpp  go2_control_routines.cpp  go2_control_services.cpp  go2_control_subscriptions.cpp  go2_control_timers.cpp  go2_control_utils.cpp  params.yaml
src/go2_description/: CMakeLists.txt  package.xml
src/go2_description/launch/: go2_description.launch.py  rviz.launch.py
src/go2_description/rviz/: go2.rviz
src/go2_description/urdf/: go2.urdf  multi_go2.urdf
src/go2_tester/: .gitignore  package.xml  setup.cfg  setup.py
src/go2_tester/go2_tester/: go2_test.py  go2_tester.py
src/unitree_api/: CMakeLists.txt  package.xml
src/unitree_api/msg/: RequestHeader.msg  RequestIdentity.msg
src/unitree_go/: CMakeLists.txt  package.xml
src/unitree_go/msg/: ActionID.msg  AudioData.msg  Error.msg  Go2FrontVideoData.msg  HeightMap.msg  InterfaceConfig.msg  LowCmd.msg  MotorCmd.msg  MotorCmds.msg  MotorStates.msg  PathPoint.msg  SportModeCmd.msg  SportModeState.msg  UwbState.msg  UwbSwitch.msg  WirelessController.msg
src/unitree_go/srv/: Action.srv
