<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_control</name>
  <version>1.0.0</version>
  <description>Unitree Go2 robot control and interface software.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation s.r.l.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dua_app_management</depend>
  <depend>dua_interfaces</depend>
  <depend>dua_node</depend>
  <depend>dua_qos_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>params_manager</depend>
  <depend>pose_kit</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>unitree_api</depend>
  <depend>unitree_go</depend>
  <depend>unitree_sdk2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
