<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_tester</name>
  <version>0.0.1</version>
  <description>Unitree API testing package.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>unitree_api</depend>
  <depend>unitree_go</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
